Criacao do Quiz Java

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -91,7 +91,7 @@
               <div class="col-lg-12">
                 <div class="caption">
               <h6>Sejam bem vindos!</h6>
-              <h2>Amplie seus conhecimentos com a NaxusAcad</h2>
+              <h2>Amplie seus conhecimentos com a NexusAcad</h2>
               <p>Essa é uma plataforma de estudos 100% online, que tem como principal intuíto facilitar a vida dos estudantes, proporcionando ensino de qualidade no conforto da sua casa.</p>
 
               <div class="main-button-blue">
