Alteração Layout Quiz

--- a/src/main/webapp/cursoJavaQuiz.html
+++ b/src/main/webapp/cursoJavaQuiz.html
@@ -92,23 +92,24 @@
     	<div class="col-lg-12">   
     		<div class="quiz-container" id="quiz">
     			<div class="quiz-header">
-    				<h2 id="question">Question Text</h2>
+    				<h2 style="color: #F4AF1B;" id="question">Question Text</h2>
+    				<br>
     				<ul>
     					<li>
     						<input type="radio" name="answer" id="a" class="answer">
-    						<label for="a" id="a_text">Answer</label>
+    						<label style="color: #fff;" for="a" id="a_text">Answer</label>
     					</li>    					
     					<li>
     						<input type="radio" name="answer" id="b" class="answer">
-    						<label for="b" id="b_text">Answer</label>
+    						<label style="color: #fff;" for="b" id="b_text">Answer</label>
     					</li>
     					<li>
     						<input type="radio" name="answer" id="c" class="answer">
-    						<label for="c" id="c_text">Answer</label>
+    						<label style="color: #fff;" for="c" id="c_text">Answer</label>
     					</li>
     					<li>
     						<input type="radio" name="answer" id="d" class="answer">
-    						<label for="d" id="d_text">Answer</label>
+    						<label style="color: #fff;" for="d" id="d_text">Answer</label>
     					</li>
     				</ul>
     			</div>
